# DAb

./: .gitignore  CLAUDE.md  README.md  WORKPLAN.md  pyproject.toml
configs/: config.yaml
configs/data/: default.yaml
configs/diffusion/: cosine.yaml  default.yaml  linear.yaml  sqrt.yaml
configs/eval/masking/: default.yaml
configs/eval/regions/: default.yaml
configs/logging/: wandb.yaml
configs/model/: base.yaml  large.yaml  small.yaml
configs/train/: default.yaml
configs/training/: debug.yaml  default.yaml
src/dab/: __init__.py  __main__.py  cli.py  tokenizer.py  train.py  vocab.py
src/dab/configs/: config.yaml
src/dab/configs/data/: default.yaml
src/dab/configs/diffusion/: default.yaml
src/dab/configs/eval/: default.yaml
src/dab/data/: __init__.py  collator.py  config.py  dataset.py  loader.py
src/dab/diffusion/: __init__.py  masking.py  noise_schedule.py  sampler.py
src/dab/encoding/: __init__.py  encoder.py  pooling.py
src/dab/eval/: __init__.py  base.py  evaluator.py  masking.py  per_position.py  region_config.py  regions.py  registry.py
src/dab/logging/: __init__.py  wandb_logger.py
src/dab/model/: __init__.py  attention.py  embeddings.py  ffn.py  layers.py  normalization.py  transformer.py
src/dab/training/: __init__.py  checkpoint.py  flops.py  masking_frequency.py  metrics.py  optimizer.py  trainer.py
src/dab/utils/: __init__.py
tests/: conftest.py
tests/e2e/: test_diffusion_components.py  test_full_pipeline.py  test_mlm_components.py  test_training_loop.py
tests/integration/: test_data_pipeline.py  test_diffusion_pipeline.py  test_encoding.py  test_masking_pipeline.py  test_model_forward.py
tests/unit/: test_attention.py  test_checkpoint.py  test_collator.py  test_data_config.py  test_dataset.py  test_embeddings.py  test_eval_masking.py  test_ffn.py  test_masking.py  test_masking_frequency.py  test_metrics.py  test_noise_schedule.py  test_normalization.py  test_optimizer.py  test_per_position_optimization.py  test_pooling.py  test_region_config.py  test_region_metrics.py  test_regions.py  test_rope.py  test_sampler.py  test_tokenizer.py  test_transformer.py  test_transforms.py  test_utils.py  test_vocab.py
(+15 files in other folders)
